Cinnamon theme - use spacing var in menu, panel, buttons & entries. Review hardcoded padding/spacing/margins. Clean up deprecated selectors. Code style fixes @extend

--- a/src/cinnamon/scss/_global.scss
+++ b/src/cinnamon/scss/_global.scss
@@ -77,3 +77,8 @@ $info_bg_color: #%TERMINAL_COLOR12%;
 
 // used for border-radius throughout theme
 $roundness: %ROUNDNESS%px;
+
+// used for buttons, entrys, panel spacing, and menu item spacing.
+$spacing: %SPACING%px;
+$spacing_plus2: (%SPACING% + 2) + px;
+
